--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
                 <i id="openNav" onclick="openNavBar()" class="fa-solid fa-bars"></i>
             </div>
             <div class="navDisplay">
-                <a class="navA" href="#">Home</a>
-                <a class="navA" href="#">Service</a>
+                <a class="navA" href="../templates/index.html">Home</a>
+                <a class="navA" href="../templates/features.html">Service</a>
                 <a class="navA" href="#">Contact Us</a>
                 <a class="navA" href="#">About</a>
                 <!-- <a class="navA" href="{{ url_for('signup') }}">Sign Up</a> -->
@@ -95,5 +95,6 @@
         </div>
     </section>
     <script src="../static/scripts/script.js"></script>
+    <script src="../static/scripts/login.js"></script>
 </body>
 </html>
