Fixed the forms (kinda)...

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,12 +93,7 @@
                 form.policy_agreement.label(class="form-check-label") }}
               </div>
 
-              <div class="check_forgot">
-                <div class="form-check">
-                  {{ form.remember_me(class="form-check-input") }} {{
-                  form.remember_me.label(class="form-check-label") }}
-                </div>
-              </div>
+              <div class="check_forgot"></div>
 
               <a id="forgotPassword" href="../templates/signin.html"
                 >Forgotten Password</a
