Added new inputs and validation, submission issues

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -76,8 +76,16 @@
             </div>
 
             <div class="form-check">
-              {{ form.policy_agreement(class="form-check-input") }} {{
-              form.policy_agreement.label(class="form-check-label") }}
+              {% if form.policy_agreement.errors %} {{
+              form.policy_agreement(class="form-control form-control-lg
+              is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.policy_agreement.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.policy_agreement(class="form-control
+              form-control-lg") }} {% endif %}
             </div>
 
             <div class="form-group">
