--- a/templates/index.html
+++ b/templates/index.html
@@ -49,56 +49,109 @@
           <div class="formContainer">
             <form action="#" id="signin_form" autocomplete="on" method="post">
               <div class="form-group">
-                {{ form.email.label(class="form-control-label") }} {% if
-                form.email.errors %} {{ form.email(class="form-control
+                {{ form2.email.label(class="form-control-label") }} {% if
+                form2.email.errors %} {{ form2.email(class="form-control
                 form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                  {% for error in form.email.errors %}
+                  {% for error in form2.email.errors %}
                   <span>{{ error }}</span>
                   {% endfor %}
                 </div>
-                {% else %} {{ form.email(class="form-control form-control-lg")
+                {% else %} {{ form2.email(class="form-control form-control-lg")
+                }} {% endif %}
+              </div>
+              <div class="form-group">
+                {{ form1.email.label(class="form-control-label") }} {% if
+                form1.email.errors %} {{ form1.email(class="form-control
+                form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form1.email.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form1.email(class="form-control form-control-lg")
                 }} {% endif %}
               </div>
 
               <div class="form-group">
-                {{ form.password.label(class="form-control-label") }} {% if
-                form.password.errors %} {{ form.password(class="form-control
+                {{ form2.password.label(class="form-control-label") }} {% if
+                form2.password.errors %} {{ form2.password(class="form-control
                 form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                  {% for error in form.password.errors %}
+                  {% for error in form2.password.errors %}
                   <span>{{ error }}</span>
                   {% endfor %}
                 </div>
-                {% else %} {{ form.password(class="form-control
+                {% else %} {{ form2.password(class="form-control
                 form-control-lg") }} {% endif %}
               </div>
 
               <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }} {%
-                if form.confirm_password.errors %} {{
-                form.confirm_password(class="form-control form-control-lg
-                is-invalid") }}
+                {{ form1.password.label(class="form-control-label") }} {% if
+                form1.password.errors %} {{ form1.password(class="form-control
+                form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                  {% for error in form.confirm_password.errors %}
+                  {% for error in form1.password.errors %}
                   <span>{{ error }}</span>
                   {% endfor %}
                 </div>
-                {% else %} {{ form.confirm_password(class="form-control
+                {% else %} {{ form1.password(class="form-control
+                form-control-lg") }} {% endif %}
+              </div>
+
+              <div class="form-group">
+                {{ form2.confirm_password.label(class="form-control-label") }}
+                {% if form2.confirm_password.errors %} {{
+                form2.confirm_password(class="form-control form-control-lg
+                is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form2.confirm_password.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form2.confirm_password(class="form-control
                 form-control-lg") }} {% endif %}
               </div>
 
               <div class="form-check">
-                {{ form.policy_agreement(class="form-check-input") }} {{
-                form.policy_agreement.label(class="form-check-label") }}
+                {{ form2.policy_agreement.label(class="form-control-label") }}
+                {% if form2.policy_agreement.errors %} {{
+                form2.policy_agreement(class="form-control form-control-lg
+                is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form2.policy_agreement.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form2.policy_agreement(class="form-control
+                form-control-lg") }} {% endif %}
               </div>
 
-              <div class="check_forgot"></div>
+              <div class="check_forgot">
+                <div class="form-check">
+                  {{ form1.remember_me.label(class="form-control-label") }} {%
+                  if form1.remember_me.errors %} {{
+                  form1.remember_me(class="form-control form-control-lg
+                  is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for error in form1.remember_me.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                  </div>
+                  {% else %} {{ form1.remember_me(class="form-control
+                  form-control-lg") }} {% endif %}
+                </div>
+              </div>
 
               <a id="forgotPassword" href="../templates/signin.html"
                 >Forgotten Password</a
               >
-              <button type="submit" id="submit">Sign In</button>
+              <div class="form-group">
+                {{ form1.submit1(class="btn btn-outline-info") }}
+              </div>
+              <div class="form-group">
+                {{ form2.submit2(class="btn btn-outline-info") }}
+              </div>
             </form>
           </div>
           <div class="noAccount_signIn">
