Reverting back to using signin/signup pages

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="form-group">
-              {{ form.submit(class="btn btn-outline-info") }}
+              {{ form.submit_to_register(class="btn btn-outline-info") }}
             </div>
             <a class="signin" href="{{ url_for('signin') }}">Or Sign In</a>
           </fieldset>
