--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           <a class="navA" href="#">Contact Us</a>
           <a class="navA" href="#">About</a>
           <!-- <a class="navA" href="{{ url_for('signup') }}">Sign Up</a> -->
-          <a id="signIn" class="navA" onclick="signIn()">Sign In</a>
+          <a id="signIn" class="navA" href="/signin">Sign In</a>
         </div>
       </div>
       <div class="l-screen">
@@ -34,141 +34,12 @@
           <a href="#">Service</a>
           <a href="#">Contact Us</a>
           <!-- <button><a href="../templates/signup.html">Sign Up</a></button> -->
-          <button onclick="signIn()"><a>Sign In</a></button>
+          <button><a href="/signin">Sign In</a></button>
         </div>
       </div>
     </nav>
     <section id="signIn_signUp">
       <div class="overlay"></div>
-      <div class="signIn_sighUp_container">
-        <div class="signIn_signup_card">
-          <div class="close_signin_signup">
-            <i onclick="close_signIn_signUp_card()" class="fa-solid fa-x"></i>
-          </div>
-          <h4 id="signin_sigiup_header">Sign in into your Lytrally account</h4>
-          <div class="formContainer">
-            <form action="#" id="signin_form" autocomplete="on" method="post">
-              <div class="form-group">
-                {{ form2.email.label(class="form-control-label") }} {% if
-                form2.email.errors %} {{ form2.email(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form2.email.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-
-                {% else %} {{ form2.email(class="form-control form-control-lg")
-                }} {% endif %}
-              </div>
-              <div class="form-group">
-                {{ form1.email.label(class="form-control-label") }} {% if
-                form1.email.errors %} {{ form1.email(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form1.email.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form1.email(class="form-control form-control-lg")
-                }} {% endif %}
-              </div>
-
-              <div class="form-group">
-                {{ form2.password.label(class="form-control-label") }} {% if
-                form2.password.errors %} {{ form2.password(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form2.password.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form2.password(class="form-control
-                form-control-lg") }} {% endif %}
-              </div>
-
-              <div class="form-group">
-                {{ form1.password.label(class="form-control-label") }} {% if
-                form1.password.errors %} {{ form1.password(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form1.password.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form1.password(class="form-control
-                form-control-lg") }} {% endif %}
-              </div>
-
-              <div class="form-group">
-                {{ form2.confirm_password.label(class="form-control-label") }}
-                {% if form2.confirm_password.errors %} {{
-                form2.confirm_password(class="form-control form-control-lg
-                is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form2.confirm_password.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form2.confirm_password(class="form-control
-                form-control-lg") }} {% endif %}
-              </div>
-
-              <div class="form-check">
-                {{ form2.policy_agreement.label(class="form-control-label") }}
-                {% if form2.policy_agreement.errors %} {{
-                form2.policy_agreement(class="form-control form-control-lg
-                is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form2.policy_agreement.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form2.policy_agreement(class="form-control
-                form-control-lg") }} {% endif %}
-              </div>
-
-              <div class="check_forgot">
-                <div class="form-check">
-                  {{ form1.remember_me.label(class="form-control-label") }} {%
-                  if form1.remember_me.errors %} {{
-                  form1.remember_me(class="form-control form-control-lg
-                  is-invalid") }}
-                  <div class="invalid-feedback">
-                    {% for error in form1.remember_me.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                  </div>
-                  {% else %} {{ form1.remember_me(class="form-control
-                  form-control-lg") }} {% endif %}
-                </div>
-              </div>
-
-              <a id="forgotPassword" href="../templates/signin.html"
-                >Forgotten Password</a
-              >
-              <div class="form-group">
-                {{ form1.submit1(class="btn btn-outline-info") }}
-              </div>
-              <div class="form-group">
-                {{ form2.submit2(class="btn btn-outline-info") }}
-              </div>
-            </form>
-          </div>
-          <div class="noAccount_signIn">
-            <a onclick="signUp()" class="noAccount">Do not have an account</a>
-            <a onclick="signIn()" class="signUpsignIn">Or Sign In</a>
-          </div>
-          <button id="google_btn">
-            <img src="../static/images/google.png" alt="Google Icon" />
-            <p class="googleBtnText">Continue with Google</p>
-          </button>
-          <button id="facebook_btn">
-            <img src="../static/images/facebook.png" alt="Facebook Icon" />
-            <p class="facebookBtnText">Continue with Facebook</p>
-          </button>
-        </div>
-      </div>
     </section>
     <section class="landingPage">
       <div class="heroPage">
@@ -189,7 +60,9 @@
             Perfect for copywriters, with built-in resources to boost
             productivity
           </p>
-          <button id="signUp" onclick="signUp()"><a>Get Started</a></button>
+          <button id="signUp">
+            <a href="/signup">Get Started </a>
+          </button>
         </div>
       </div>
     </section>
