--- a/templates/signin.html
+++ b/templates/signin.html
@@ -79,7 +79,7 @@
             <a href="{{ url_for('signin') }}">Forgotten Password</a>
           </div>
           <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
+            {{ form.submit_to_login(class="btn btn-outline-info") }}
           </div>
         </form>
       </div>
