--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
     <title>Lytrally</title>
     {% endif %}
     <!-- <base href="/project-lytrally/"> -->
+    <link rel="stylesheet" href="../static/style/style.css" />
     <link rel="stylesheet" href="../static/style/fontawesome.min.css" />
     <link rel="stylesheet" href="../static/style/all.min.css" />
     <link rel="stylesheet" href="../static/style/solid.css" />
