Features and Account now use layout

--- a/templates/account.html
+++ b/templates/account.html
@@ -1,43 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lytrally</title>
-    <!-- <base href="/project-lytrally/"> -->
-    <link rel="stylesheet" href="../static/style/account.css">
-    <link rel="stylesheet" href="../static/style/fontawesome.min.css">
-    <link rel="stylesheet" href="../static/style/all.min.css">
-    <link rel="stylesheet" href="../static/style/solid.css">
-    <link rel="stylesheet" href="../static/style/solid.min.css">
-</head>
-<body>
-    <header>
-        <img id="backArrow" onclick="prevPage()" src="../static/images/backArrow.svg" alt="Back Arrow Icon">
-        <h4>My Account</h4>
-    </header>
-    <form action="#">
-        <label for="image">
-            <div class="profile">
-                <div class="profileImg">Add profile picture</div>
-                <p>Change profile picture</p>
-            </div>
-        </label>
-        <input type="image" src="" alt="">
-    </form>
-    <section class="account">
-        <form id="account_form" action="#" autocomplete="on" method="post">
-            <label for="firstName">First Name</label>
-            <input type="text">
-            <label for="OtherNames">Other Names</label>
-            <input type="text">
-            <label for="displayName">Display Name</label>
-            <input type="text">
-            <label for="changePassword">Change Password</label>
-            <input type="text">
-            <button type="submit">Log Out</button>
-        </form>
-    </section>
-    <script src="../static/scripts/account.js"></script>
-</body>
-</html>
+{% extends "layout.html" %} {% block head %}
+<link rel="stylesheet" href="../static/style/account.css" />
+{% endblock head %}{% block body %}
+<header>
+  <img
+    id="backArrow"
+    onclick="prevPage()"
+    src="../static/images/backArrow.svg"
+    alt="Back Arrow Icon"
+  />
+  <h4>My Account</h4>
+</header>
+<form action="#">
+  <label for="image">
+    <div class="profile">
+      <div class="profileImg">Add profile picture</div>
+      <p>Change profile picture</p>
+    </div>
+  </label>
+  <input type="image" src="" alt="" />
+</form>
+<section class="account">
+  <form id="account_form" action="#" autocomplete="on" method="post">
+    <label for="firstName">First Name</label>
+    <input type="text" />
+    <label for="OtherNames">Other Names</label>
+    <input type="text" />
+    <label for="displayName">Display Name</label>
+    <input type="text" />
+    <label for="changePassword">Change Password</label>
+    <input type="text" />
+    <button type="submit">Log Out</button>
+  </form>
+</section>
+<script src="../static/scripts/account.js"></script>
+{% endblock body %}
