Resolving merge conflict

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -126,7 +126,7 @@ body::-webkit-scrollbar
     box-shadow: 2px 2px 2px var(--lilac-color);
 }
 
-@keyframes wobbl
+@keyframes wobble
 {
     0% 
     {
